tests/snapshots/test_runner__tests__compiler__interpret-free__circumfix-1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
fn button (x : Int) button : () {
    innate print (x)
}

button 123 button;

============
EXIT CODE
============
0

============
STDOUT
============
123

============
STDERR
============
