tests/snapshots/test_runner__tests__compiler__interpret-free__infix-left-assoc-1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
fn (x : String) .concat (y : String) : String {
   "${x} ${y}"
}

print ("Hello" .concat "World" .concat "!")

============
EXIT CODE
============
0

============
STDOUT
============
"Hello World !"

============
STDERR
============
