tests/snapshots/test_runner__tests__compiler__interpret-free__space-case-variable-name-1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let my var : Int = 1;
print (my var)

============
EXIT CODE
============
0

============
STDOUT
============
1

============
STDERR
============
